# simdjson-js-exp

./: .gitignore  .npmignore  Cargo.toml  README.md  binding.cjs  binding.d.ts  binding.gyp  binding.js  build.rs  index.d.ts  index.js  package.json  rustfmt.toml  simdjson.js  simdjson_ops.wasm  twitter.json
.cargo/: config.toml
data/: a.json  t.json
downtoad/: Cargo.toml
downtoad/src/: main.rs
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
simd-json/src/: lib.rs
simd-json/src/neon/: stage1.rs
src/: binding.cpp  binding_.cpp  deserializer.rs  lib.rs
src-c/: binding.cpp  simdjson.h
tools/: download-cli.wasm  download-v8-headers.js  download-v8-source.js  downtoad.js  update-simdjson.js
tools/download-cli/: Cargo.toml
tools/download-cli/.cargo/: config.toml
tools/download-cli/src/: main.rs
tools/downtoad/: Cargo.toml  downtoad.wasm
tools/downtoad/src/: main.rs
