#cargo-features = ["per-package-target"]

[package]
name = "simdjson-ops"
version = "0.1.0"
edition = "2021"
#forced-target = "wasm32-unknown-unknown"

[dependencies]
simd-json = "0.9.2"
wasm-bindgen = "0.2.86"
#mimalloc = { version = "0.1.37", default-features = false }
lol_alloc =  "0.4.0"

[patch.crates-io]
simd-json = { path = "simd-json" }
value-trait = { git = "https://github.com/simd-lite/value-trait" }

[profile.release]
lto = "fat"
panic = "abort"
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]
