#cargo-features = ["per-package-target"]

[package]
name = "simdjson-ops"
version = "0.1.0"
edition = "2021"

[dependencies]
simd-json = "0.9.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
napi = { version = "2.12.0", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
napi-build = "2.0.1"

[patch.crates-io]
simd-json = { path = "simd-json" }
value-trait = { git = "https://github.com/simd-lite/value-trait" }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

[lib]
crate-type = ["cdylib"]
