[package]
name = "downtoad"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0"
tar = "0.4"
attohttpc = { version = "0.25", default_features = false, features = ["rustls"] }

[patch.crates-io]
ring = { git = "https://github.com/Mesteery/ring", branch = "wasm32-wasi" }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
